@@ -69,5 +69,8 @@
         <setting id="enh_debug" type="bool" label="33021" default="true" />
         <setting id="debuglog" type="action" label="30017" enable="true" option="close" action="RunPlugin(plugin://plugin.video.cumination/?mode=utils.ToggleDebug)" />
         <setting id="startlog" type="action" label="33020" enable="true" option="close" action="RunPlugin(plugin://plugin.video.cumination/?mode=main.openLogUploader)" />
+        <setting type="lsep" label="33024" />
+        <setting id="fs_enable" type="bool" label="33022" default="false" />
+        <setting id="fs_host" enable="eq(-1,true)" type="text" label="33023" default="http://localhost:8191/v1"/>
     </category>
 </settings>
